force-app/main/default/objects/Job_Type__c/Job_Type__c.object-meta.xml
<CustomObject>
    <label>Job Type</label>
    <nameField>
        <label>JOB TYPE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>