force-app/main/default/objects/Job_Type__c/fields/Additional_Subject_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Additional_Subject_Prompt__c</fullName>
    <label>Additional Subject Prompt</label>
    <length>32</length>
    <type>Text</type>
</CustomField>