force-app/main/default/objects/Job_Type__c/fields/Buyer_Types__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Types__c</fullName>
    <label>Buyer Types</label>
    <length>64</length>
    <type>Text</type>
</CustomField>