force-app/main/default/objects/Job_Type__c/fields/Bypass_CC__c.field-meta.xml
<CustomField>
    <fullName>Bypass_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass CC</label>
    <type>Checkbox</type>
</CustomField>