force-app/main/default/objects/Job_Type__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>