force-app/main/default/objects/Job_Type__c/fields/Engagement_Default_Stage__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Default_Stage__c</fullName>
    <description>Default Stage for Conversion</description>
    <label>Engagement Default Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Settlement or Agreement Reached</fullName>
            </value>
            <value>
                <fullName>Book Prep/Underwriting</fullName>
            </value>
            <value>
                <fullName>In Market</fullName>
            </value>
            <value>
                <fullName>Received Indications of Interest</fullName>
            </value>
            <value>
                <fullName>Pre-LOI/Due Diligence</fullName>
            </value>
            <value>
                <fullName>Rec&apos;d Indications/Submitted Bid</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Signed LOI/Due Diligence</fullName>
            </value>
            <value>
                <fullName>Signed Term Sheets</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Pending Regulatory Approval</fullName>
            </value>
            <value>
                <fullName>Verbally Retained</fullName>
            </value>
            <value>
                <fullName>Performing Analysis</fullName>
            </value>
            <value>
                <fullName>Ongoing Analysis</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Testimony</fullName>
            </value>
            <value>
                <fullName>Opinion Report</fullName>
            </value>
            <value>
                <fullName>Opinion Development</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Delivered Report</fullName>
            </value>
            <value>
                <fullName>Bill/File</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>