force-app/main/default/objects/Job_Type__c/fields/Engagement_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Record_Type__c</fullName>
    <label>Engagement Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>