force-app/main/default/objects/Job_Type__c/fields/FS_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Product_Type__c</fullName>
    <label>FS Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyside</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>Sellside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>