force-app/main/default/objects/Job_Type__c/fields/Has_Multiple_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Has_Multiple_Deliverables__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the deal has multiple deliverables, by default. If this is true, the accrual can be made according to the stage.</description>
    <inlineHelpText>Indicates if the deal has multiple deliverables, by default. If this is true, the accrual can be made according to the stage.</inlineHelpText>
    <label>Has Multiple Deliverables</label>
    <type>Checkbox</type>
</CustomField>