force-app/main/default/objects/Job_Type__c/fields/Has_Retainer__c.field-meta.xml
<CustomField>
    <fullName>Has_Retainer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Retainer</label>
    <type>Checkbox</type>
</CustomField>