force-app/main/default/objects/Job_Type__c/fields/Is_Transactional__c.field-meta.xml
<CustomField>
    <fullName>Is_Transactional__c</fullName>
    <label>Is Transactional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>