force-app/main/default/objects/Job_Type__c/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <externalId>true</externalId>
    <label>Job Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>