force-app/main/default/objects/Job_Type__c/fields/Letterhead__c.field-meta.xml
<CustomField>
    <fullName>Letterhead__c</fullName>
    <label>Letterhead</label>
    <length>5</length>
    <type>Text</type>
</CustomField>