force-app/main/default/objects/Job_Type__c/fields/Line_FR_Percent__c.field-meta.xml
<CustomField>
    <fullName>Line_FR_Percent__c</fullName>
    <label>Line FR Percent</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>