force-app/main/default/objects/Job_Type__c/fields/No_Additional_Clients__c.field-meta.xml
<CustomField>
    <fullName>No_Additional_Clients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Additional Clients</label>
    <type>Checkbox</type>
</CustomField>