force-app/main/default/objects/Job_Type__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>16</length>
    <type>Text</type>
</CustomField>