force-app/main/default/objects/Job_Type__c/fields/Primary_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Line_of_Business__c</fullName>
    <label>Primary Line of Business</label>
    <length>5</length>
    <type>Text</type>
</CustomField>