force-app/main/default/objects/Job_Type__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Buyside</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Consulting / InSource</fullName>
            </value>
            <value>
                <fullName>CVAS - Consulting / InSource</fullName>
            </value>
            <value>
                <fullName>CVAS - Corporate Valuation Advisory Services</fullName>
            </value>
            <value>
                <fullName>CVAS - Other</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>ESOP</fullName>
            </value>
            <value>
                <fullName>Estate &amp; Gift Tax</fullName>
            </value>
            <value>
                <fullName>Fairness, Negotiated Fairness, Solvency</fullName>
            </value>
            <value>
                <fullName>Fairness, Transaction Opinions</fullName>
            </value>
            <value>
                <fullName>Financial Restructuring - Creditor / Debtor</fullName>
            </value>
            <value>
                <fullName>Financial Restructuring - Other</fullName>
            </value>
            <value>
                <fullName>Fund Opinions</fullName>
            </value>
            <value>
                <fullName>Illiquid Financial Assets</fullName>
            </value>
            <value>
                <fullName>Mergers &amp; Acquisitions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portfolio Valuation &amp; Advisory</fullName>
            </value>
            <value>
                <fullName>Private Funds Advisory</fullName>
            </value>
            <value>
                <fullName>Sellside</fullName>
            </value>
            <value>
                <fullName>Strategic Consulting</fullName>
            </value>
            <value>
                <fullName>TAS - Due Diligence Services</fullName>
            </value>
            <value>
                <fullName>Tech+IP Advisory</fullName>
            </value>
            <value>
                <fullName>Transaction Opinions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>