force-app/main/default/objects/Job_Type__c/fields/Product_Line_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Reporting__c</fullName>
    <label>Product Line Reporting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADV</fullName>
            </value>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CVAS</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>DMAB</fullName>
            </value>
            <value>
                <fullName>DMAS</fullName>
            </value>
            <value>
                <fullName>DRC</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>FO</fullName>
            </value>
            <value>
                <fullName>FR-LM</fullName>
            </value>
            <value>
                <fullName>FRO</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>PFG</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>TIA</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>