force-app/main/default/objects/Job_Type__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Buyside</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Consulting / InSource</fullName>
            </value>
            <value>
                <fullName>CVAS - Consulting / InSource</fullName>
            </value>
            <value>
                <fullName>CVAS - Corporate Valuation Advisory Services</fullName>
            </value>
            <value>
                <fullName>CVAS - Other</fullName>
            </value>
            <value>
                <fullName>Debt Capital Markets</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Equity Capital Markets</fullName>
            </value>
            <value>
                <fullName>ESOP</fullName>
            </value>
            <value>
                <fullName>Estate &amp; Gift Tax</fullName>
            </value>
            <value>
                <fullName>FA - Fund Opinions-Fairness</fullName>
            </value>
            <value>
                <fullName>FA - Fund Opinions-Non-Fairness</fullName>
            </value>
            <value>
                <fullName>FA - Fund Opinions-Valuation</fullName>
            </value>
            <value>
                <fullName>Fairness, Negotiated Fairness, Solvency</fullName>
            </value>
            <value>
                <fullName>Fairness, Transaction Opinions</fullName>
            </value>
            <value>
                <fullName>Illiquid Financial Assets</fullName>
            </value>
            <value>
                <fullName>Liability Management</fullName>
            </value>
            <value>
                <fullName>Mergers &amp; Acquisitions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portfolio Valuation &amp; Advisory</fullName>
            </value>
            <value>
                <fullName>Private Funds Advisory</fullName>
            </value>
            <value>
                <fullName>Sellside</fullName>
            </value>
            <value>
                <fullName>Syndicated Finance</fullName>
            </value>
            <value>
                <fullName>TAS - Due Diligence Services</fullName>
            </value>
            <value>
                <fullName>Tech+IP Advisory</fullName>
            </value>
            <value>
                <fullName>Transaction Opinions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>