force-app/main/default/objects/Job_Type__c/fields/Product_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Code__c</fullName>
    <label>Product Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00000</fullName>
            </value>
            <value>
                <fullName>ADV</fullName>
            </value>
            <value>
                <fullName>CVAS</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>FO</fullName>
            </value>
            <value>
                <fullName>FRCD</fullName>
            </value>
            <value>
                <fullName>FRO</fullName>
            </value>
            <value>
                <fullName>GEH</fullName>
            </value>
            <value>
                <fullName>GER</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>GNL</fullName>
            </value>
            <value>
                <fullName>M_A</fullName>
            </value>
            <value>
                <fullName>NFO</fullName>
            </value>
            <value>
                <fullName>OTH</fullName>
            </value>
            <value>
                <fullName>PFA</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>TIA</fullName>
            </value>
            <value>
                <fullName>TOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>