force-app/main/default/objects/Job_Type__c/fields/Prompt_for_Adverse_Client__c.field-meta.xml
<CustomField>
    <fullName>Prompt_for_Adverse_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prompt for Adverse Client</label>
    <type>Checkbox</type>
</CustomField>