force-app/main/default/objects/Job_Type__c/fields/Require_Capsource__c.field-meta.xml
<CustomField>
    <fullName>Require_Capsource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Capsource</label>
    <type>Checkbox</type>
</CustomField>