force-app/main/default/objects/Job_Type__c/fields/Require_Disclose_Status__c.field-meta.xml
<CustomField>
    <fullName>Require_Disclose_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require Disclose Status</label>
    <type>Checkbox</type>
</CustomField>