force-app/main/default/objects/Job_Type__c/fields/Require_MA_Closed_With__c.field-meta.xml
<CustomField>
    <fullName>Require_MA_Closed_With__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require MA Closed With</label>
    <type>Checkbox</type>
</CustomField>