force-app/main/default/objects/Job_Type__c/fields/Role_Associate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Role_Associate_Percent__c</fullName>
    <label>Role Associate Percent</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>