force-app/main/default/objects/Job_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Job_Code__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Buyer_Types__c</columns>
    <columns>Primary_Line_of_Business__c</columns>
    <columns>Has_Retainer__c</columns>
    <columns>Engagement_Record_Type__c</columns>
    <columns>Engagement_Default_Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Is_Transactional__c</columns>
    <columns>Product_Line_Reporting__c</columns>
    <columns>Product_Type_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>