force-app/main/default/objects/Job_Type__c/listViews/All_Job_Types.listView-meta.xml
<ListView>
    <fullName>All_Job_Types</fullName>
    <columns>NAME</columns>
    <columns>Job_Code__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Type_Code__c</columns>
    <columns>Primary_Line_of_Business__c</columns>
    <columns>Engagement_Record_Type__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Has_Retainer__c</columns>
    <columns>Engagement_Default_Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Is_Transactional__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Job Types</label>
</ListView>