force-app/main/default/objects/Job_Type__c/listViews/FAS_Job_Type.listView-meta.xml
<ListView>
    <fullName>FAS_Job_Type</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Job_Code__c</columns>
    <columns>Letterhead__c</columns>
    <columns>Category__c</columns>
    <columns>FS_Product_Type__c</columns>
    <columns>Engagement_Record_Type__c</columns>
    <columns>Primary_Line_of_Business__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Type_Code__c</columns>
    <columns>Role_Analyst_Percent__c</columns>
    <columns>Role_Associate_Percent__c</columns>
    <columns>Role_Initiator_Percent__c</columns>
    <columns>Role_Manager_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Line_of_Business__c</field>
        <operation>equals</operation>
        <value>FVA</value>
    </filters>
    <label>FVA Job Type</label>
</ListView>